Project COS20015_W4 {
  database_type: "PostgreSQL"
}

Table patients {
  id uuid [pk, not null ]
  name text [not null]
  email text [not null]
  phone text [not null]
  address text [not null]
}

Table physiotherapists {
  id uuid [pk, not null ]
  name text [not null]
  email text [not null]
  phone text [not null]
  address text [not null]
}

Table appointments {
  id uuid [pk, not null]
  patient_id uuid [not null]
  physiotherapist_id uuid [not null]
  appointment_date date [not null]
  appointment_time time [not null]
  duration numeric [not null]
  note text
}

Ref: patients.id < appointments.patient_id
Ref: physiotherapists.id < appointments.physiotherapist_id
